# WildFire-Detection-Using-Openenv

./: .gitignore  README.md  best_model.pkl  client.py  inference.py  models.py  openenv.yaml  push_hf.py  pyproject.toml  q_model.pkl  requirements.txt  wildfire_episode_log.txt
environments/wildfire_detection/: firenet_inference.py  wildfire_env.py
multipen/: .dockerignore  .gitignore  Dockerfile  __init__.py  debug_env.py  inference.py  inference_rl.py  openenv.yaml  run_server.py  test_env.py  train_rl.py
multipen/environments/wildfire_detection/: __init__.py
multipen/server/: __init__.py  app.py  multipen_environment.py  requirements.txt  wildfire_environment.py
openenv_wildfire_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  wildfire_environment.py
