# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-wildfire-detection"
version = "0.1.0"
description = "Wildfire Detection RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.2",
    # Environment dependencies
    "numpy>=1.19.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tensorflow>=2.15.0",
    # RL dependencies
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "multipen.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["multipen", "multipen.server", "multipen.environments.wildfire_detection"]
package-dir = { "multipen" = ".", "multipen.server" = "server", "multipen.environments.wildfire_detection" = "environments/wildfire_detection" }